[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bandamon.py"]

[project]
name = "bandamon"
version = "0.0.1"
authors = [
  { name="Dong Qichen", email="qidong@cern.ch" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://gitlab.cern.ch/qidong/bandamon"

[project.scripts]
bandamon = "bandamon:main"